--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "axios": "^0.19.0",
     "react": "^16.8.6",
+    "react-burger-menu": "^2.6.11",
     "react-dom": "^16.8.6",
+    "react-hamburger-menu": "^1.1.1",
     "react-icons": "^3.7.0",
     "react-redux": "^7.1.0",
     "react-router": "^5.0.1",
